log/build_2025-08-27_13-52-49/pixhawk_control/stderr.log
/usr/local/lib/python3.10/dist-packages/setuptools/_distutils/dist.py:261: UserWarning: Unknown distribution option: 'tests_require'
  warnings.warn(msg)
  File "/workspace/install/pixhawk_control/lib/python3.10/site-packages/pixhawk_control/connect_pixhawk.py", line 36
    python3 -c "import mavsdk, sys; print('mavsdk', mavsdk.__version__)"
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

